# q2-mag

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker-push.yaml
conda-recipe/: meta.yaml
environment-files/: q2-mag-qiime2-moshpit-2026.4.yml
q2_mag/: __init__.py  citations.bib  plugin_setup.py  utils.py
q2_mag/abundance/: __init__.py  abundance.py
q2_mag/abundance/tests/: test_abundance.py
q2_mag/assets/busco/css/: styles.css
q2_mag/assets/busco/feature_data/: detailed_view.html  index.html  table.html
q2_mag/assets/busco/js/: detailed_view.js  index.js
q2_mag/assets/busco/sample_data/: detailed_view.html  index.html  table.html
q2_mag/busco/: __init__.py  busco.py  database.py  partition.py  utils.py
q2_mag/busco/tests/: test_busco_feature_data.py  test_busco_sample_data.py  test_fetch_busco.py  test_partition.py  test_utils.py  test_vega_data_prep.py
q2_mag/busco/types/: __init__.py  _format.py  _transformer.py  _type.py
q2_mag/das_tool/: __init__.py  das_tool.py
q2_mag/das_tool/tests/: test_das_tool.py
q2_mag/dereplication/: __init__.py  derep.py
q2_mag/dereplication/tests/: test_dereplication.py
q2_mag/filtering/: __init__.py  filter_mags.py
q2_mag/filtering/tests/: test_filter.py
q2_mag/metabat2/: __init__.py  metabat2.py  utils.py
q2_mag/metabat2/tests/: test_metabat2.py  test_utils.py
q2_mag/semibin2/: __init__.py  semibin2.py  utils.py
q2_mag/semibin2/tests/: __init__.py  test_semibin2.py  test_utils.py
q2_mag/tests/: test_utils.py
(+26 files in other folders)
